--- a/2 - Frontend Basics/htu_courses/index.html
+++ b/2 - Frontend Basics/htu_courses/index.html
@@ -43,7 +43,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Contact Us</a>
+                    <a href="./contact-us.html">Contact Us</a>
                 </li>
                 <li>
                     <a href="#">About Us</a>
