--- a/4 - Frontend Advanced/js_demo/index.html
+++ b/4 - Frontend Advanced/js_demo/index.html
@@ -14,7 +14,8 @@
     </script> -->
 
     <!-- <script src="./app.js"></script> -->
-    <script src="./functions.js"></script>
+    <!-- <script src="./functions.js"></script> -->
+    <script src="./party.js"></script>
 </body>
 
 </html>
