--- a/4 - Frontend Advanced/js_demo/index.html
+++ b/4 - Frontend Advanced/js_demo/index.html
@@ -15,7 +15,8 @@
 
     <!-- <script src="./app.js"></script> -->
     <!-- <script src="./functions.js"></script> -->
-    <script src="./party.js"></script>
+    <!-- <script src="./party.js"></script> -->
+    <script src="./objects.js"></script>
 </body>
 
 </html>
