--- a/4 - Frontend Advanced/animals_api/index.html
+++ b/4 - Frontend Advanced/animals_api/index.html
@@ -13,14 +13,19 @@
     <div class="container p-5 d-flex flex-column justify-content-center align-items-center">
         <h1 class="text-center mb-5">Animals API App</h1>
 
+        <div class="d-flex justify-content-center mb-5">
+            <button id="refresh" class="btn btn-success">
+                Refresh
+            </button>
+        </div>
+
         <div class="card m-auto" style="width: 18rem;">
-            <img id="a-img" src="" class="card-img-top" alt="...">
+            <img id="a-image" src="" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 id="a-name" class="card-title"></h5>
                 <p id="a-diet" class="card-text"></p>
             </div>
             <ul id="a-data-list" class="list-group list-group-flush">
-                <!-- <li class="list-group-item">An item</li> -->
             </ul>
         </div>
     </div>
